test/constructor/missing_arguments.lox
struct Foo {
  fn init(a, b) {}
}

var foo = Foo(1) // error: expected 2 arguments but got 1
